--- a/recipes/biryani.html
+++ b/recipes/biryani.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipe - Biryani</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Biryani</h1>
-</body>
+    <img src="../images/biryani.png" alt="A very tasty biryani" />
+
+    <h2>Description</h2>
+    <p>
+      A very tasty and interesting biryani; the color looks appetizing and the
+      taste is great! It's delicious served with mint chutney or simple, plain
+      yogurt.
+    </p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>2 tablespoons ghee (clarified butter), or olive oil</li>
+        <li>1 red onion, cut into 1/2-inch dice</li>
+        <li>½ teaspoon cumin seed</li>
+        <li>1 (1 inch) piece cinnamon stick</li>
+        <li>7 peppercorns</li>
+        <li>1 tablespoon ginger garlic paste</li>
+        <li>1 tomato, diced</li>
+        <li>½ cup water</li>
+        <li>½ cup peas</li>
+        <li>½ cup diced carrot</li>
+        <li>½ cup diced potato</li>
+        <li>1 cube chicken bouillon</li>
+        <li>1 teaspoon salt</li>
+        <li>¼ teaspoon ground red chile pepper</li>
+        <li>¼ teaspoon black pepper</li>
+        <li>½ teaspoon garam masala</li>
+        <li>¼ teaspoon ground turmeric</li>
+        <li>4 cups water</li>
+        <li>2 cups basmati rice, rinsed and drained</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Melt ghee in a large Dutch oven over medium heat.</li>
+        <li>Add onion, and cook until softened, about 3 minutes.</li>
+        <li>Stir in cumin seed, cinnamon stick, and peppercorns. </li>
+        <li>Cook until the spices are fragrant, and the cumin seeds begin to pop, about 3 minutes.</li>
+        <li>Stir in ginger garlic paste, tomatoes, and 1/2 cup water.</li>
+        <li>Bring to a simmer, and cook until the water has evaporated, about 5 minutes. </li>
+        <li>Stir in peas, carrot, and potato. </li>
+        <li>Season with chicken bouillon, salt, red chile, black pepper, garam masala, and turmeric. </li>
+        <li>Stir well, then cover, and cook for 3 minutes. </li>
+        <li>Pour in 4 cups water and bring to a boil over high heat. </li>
+        <li>Once boiling, stir in basmati rice, reduce heat to medium, recover, and simmer for 10 minutes. </li>
+        <li>Reduce heat to low and continue to cook until the rice has softened, 10 to 15 minutes more. </li>
+    </ol>
+  </body>
 </html>
