--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/biryani.html">Biryani</a>
+    <a href="./recipes/biryani.html" target="_blank" rel="noopener noreferrer">Biryani</a>
   </body>
 </html>
