--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/biryani.html" target="_blank" rel="noopener noreferrer">Biryani</a>
+    <ul>
+      <li>
+        <a
+          href="./recipes/biryani.html"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Biryani</a
+        >
+        <a
+          href="./recipes/chicken-tikka-masala.html"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Chicken Tikka Masala</a
+        >
+      </li>
+    </ul>
   </body>
 </html>
