Link mango lassi recipe

--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
           >Chicken Tikka Masala</a
         >
       </li>
+      <li>
+        <a
+          href="./recipes/mango-lassi.html"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Mango Lassi</a
+        >
+      </li>
     </ul>
   </body>
 </html>
